@@ -24,11 +24,11 @@ import org.apache.kafka.coordinator.group.generated.StreamsGroupTopologyValue.To
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.OptionalInt;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -46,23 +46,35 @@ public class ChangelogTopicsTest {
         .setTopicConfigs(List.of(TOPIC_CONFIG));
     private static final Subtopology SUBTOPOLOGY_NO_SOURCE = new Subtopology()
         .setSubtopologyId("SUBTOPOLOGY_NO_SOURCE")
-        .setSourceTopics(Collections.emptyList())
-        .setRepartitionSinkTopics(Collections.singletonList(SINK_TOPIC_NAME))
+        .setSourceTopics(List.of())
+        .setRepartitionSinkTopics(List.of(SINK_TOPIC_NAME))
         .setRepartitionSourceTopics(List.of(REPARTITION_TOPIC_INFO))
-        .setStateChangelogTopics(Collections.emptyList());
+        .setStateChangelogTopics(List.of());
+    private static final Subtopology SUBTOPOLOGY_NO_REPARTITION_SOURCE = new Subtopology()
+        .setSubtopologyId("SUBTOPOLOGY_NO_SOURCE")
+        .setSourceTopics(List.of(SOURCE_TOPIC_NAME))
+        .setRepartitionSinkTopics(List.of(SINK_TOPIC_NAME))
+        .setRepartitionSourceTopics(List.of())
+        .setStateChangelogTopics(List.of());
+    private static final Subtopology SUBTOPOLOGY_NO_SOURCE_NO_REPARTITION_SOURCE = new Subtopology()
+        .setSubtopologyId("SUBTOPOLOGY_NO_SOURCE")
+        .setSourceTopics(List.of())
+        .setRepartitionSinkTopics(List.of(SINK_TOPIC_NAME))
+        .setRepartitionSourceTopics(List.of())
+        .setStateChangelogTopics(List.of());
     private static final Subtopology SUBTOPOLOGY_STATELESS = new Subtopology()
         .setSubtopologyId("SUBTOPOLOGY_STATELESS")
-        .setSourceTopics(Collections.singletonList(SOURCE_TOPIC_NAME))
-        .setRepartitionSinkTopics(Collections.singletonList(SINK_TOPIC_NAME))
+        .setSourceTopics(List.of(SOURCE_TOPIC_NAME))
+        .setRepartitionSinkTopics(List.of(SINK_TOPIC_NAME))
         .setRepartitionSourceTopics(List.of(REPARTITION_TOPIC_INFO))
-        .setStateChangelogTopics(Collections.emptyList());
+        .setStateChangelogTopics(List.of());
     private static final TopicInfo SOURCE_CHANGELOG_TOPIC_CONFIG = new TopicInfo()
         .setName(SOURCE_TOPIC_NAME)
         .setTopicConfigs(List.of(TOPIC_CONFIG));
     private static final Subtopology SUBTOPOLOGY_SOURCE_CHANGELOG = new Subtopology()
         .setSubtopologyId("SUBTOPOLOGY_SOURCE_CHANGELOG")
-        .setSourceTopics(Collections.singletonList(SOURCE_TOPIC_NAME))
-        .setRepartitionSinkTopics(Collections.singletonList(SINK_TOPIC_NAME))
+        .setSourceTopics(List.of(SOURCE_TOPIC_NAME))
+        .setRepartitionSinkTopics(List.of(SINK_TOPIC_NAME))
         .setRepartitionSourceTopics(List.of(REPARTITION_TOPIC_INFO))
         .setStateChangelogTopics(List.of(SOURCE_CHANGELOG_TOPIC_CONFIG));
     private static final TopicInfo CHANGELOG_TOPIC_CONFIG = new TopicInfo()
@@ -70,14 +82,14 @@ public class ChangelogTopicsTest {
         .setTopicConfigs(List.of(TOPIC_CONFIG));
     private static final Subtopology SUBTOPOLOGY_STATEFUL = new Subtopology()
         .setSubtopologyId("SUBTOPOLOGY_STATEFUL")
-        .setSourceTopics(Collections.singletonList(SOURCE_TOPIC_NAME))
-        .setRepartitionSinkTopics(Collections.singletonList(SINK_TOPIC_NAME))
+        .setSourceTopics(List.of(SOURCE_TOPIC_NAME))
+        .setRepartitionSinkTopics(List.of(SINK_TOPIC_NAME))
         .setRepartitionSourceTopics(List.of(REPARTITION_TOPIC_INFO))
         .setStateChangelogTopics(List.of(CHANGELOG_TOPIC_CONFIG));
     private static final Subtopology SUBTOPOLOGY_BOTH = new Subtopology()
         .setSubtopologyId("SUBTOPOLOGY_BOTH")
-        .setSourceTopics(Collections.singletonList(SOURCE_TOPIC_NAME))
-        .setRepartitionSinkTopics(Collections.singletonList(SINK_TOPIC_NAME))
+        .setSourceTopics(List.of(SOURCE_TOPIC_NAME))
+        .setRepartitionSinkTopics(List.of(SINK_TOPIC_NAME))
         .setRepartitionSourceTopics(List.of(REPARTITION_TOPIC_INFO))
         .setStateChangelogTopics(List.of(SOURCE_CHANGELOG_TOPIC_CONFIG, CHANGELOG_TOPIC_CONFIG));
 
@@ -86,14 +98,32 @@ public class ChangelogTopicsTest {
     }
 
     @Test
-    public void shouldFailIfNoSourceTopics() {
-        final List<Subtopology> subtopologies = List.of(SUBTOPOLOGY_NO_SOURCE);
+    public void shouldFailIfNoSourceTopicsAndNoRepartitionSourceTopics() {
+        final List<Subtopology> subtopologies = List.of(SUBTOPOLOGY_NO_SOURCE_NO_REPARTITION_SOURCE);
 
         final ChangelogTopics changelogTopics =
             new ChangelogTopics(LOG_CONTEXT, subtopologies, ChangelogTopicsTest::topicPartitionProvider);
         StreamsInvalidTopologyException e = assertThrows(StreamsInvalidTopologyException.class, changelogTopics::setup);
 
         assertTrue(e.getMessage().contains("No source topics found for subtopology"));
+    }
+
+    @Test
+    public void shouldNotFailIfOnlySourceTopicsEmpty() {
+        final List<Subtopology> subtopologies = List.of(SUBTOPOLOGY_NO_SOURCE);
+
+        final ChangelogTopics changelogTopics =
+            new ChangelogTopics(LOG_CONTEXT, subtopologies, ChangelogTopicsTest::topicPartitionProvider);
+        assertDoesNotThrow(changelogTopics::setup);
+    }
+
+    @Test
+    public void shouldNotFailIfOnlyRepartitionSourceTopicsEmpty() {
+        final List<Subtopology> subtopologies = List.of(SUBTOPOLOGY_NO_REPARTITION_SOURCE);
+
+        final ChangelogTopics changelogTopics =
+            new ChangelogTopics(LOG_CONTEXT, subtopologies, ChangelogTopicsTest::topicPartitionProvider);
+        assertDoesNotThrow(changelogTopics::setup);
     }
 
     @Test
@@ -104,7 +134,7 @@ public class ChangelogTopicsTest {
             new ChangelogTopics(LOG_CONTEXT, subtopologies, ChangelogTopicsTest::topicPartitionProvider);
         Map<String, Integer> setup = changelogTopics.setup();
 
-        assertEquals(Collections.emptyMap(), setup);
+        assertEquals(Map.of(), setup);
     }
 
     @Test
@@ -119,14 +149,14 @@ public class ChangelogTopicsTest {
     }
 
     @Test
-    public void shouldNotContainSourceBasedChangelogs() {
+    public void shouldContainSourceBasedChangelogs() {
         final List<Subtopology> subtopologies = List.of(SUBTOPOLOGY_SOURCE_CHANGELOG);
 
         final ChangelogTopics changelogTopics =
             new ChangelogTopics(LOG_CONTEXT, subtopologies, ChangelogTopicsTest::topicPartitionProvider);
         Map<String, Integer> setup = changelogTopics.setup();
 
-        assertEquals(Collections.emptyMap(), setup);
+        assertEquals(Map.of(SOURCE_TOPIC_NAME, 3), setup);
     }
 
     @Test
@@ -137,6 +167,6 @@ public class ChangelogTopicsTest {
             new ChangelogTopics(LOG_CONTEXT, subtopologies, ChangelogTopicsTest::topicPartitionProvider);
         Map<String, Integer> setup = changelogTopics.setup();
 
-        assertEquals(Map.of(CHANGELOG_TOPIC_CONFIG.name(), 3), setup);
+        assertEquals(Map.of(CHANGELOG_TOPIC_CONFIG.name(), 3, SOURCE_TOPIC_NAME, 3), setup);
     }
 }
