@@ -16,15 +16,14 @@
  */
 package org.apache.kafka.server.common;
 
-import java.util.Collections;
 import java.util.Map;
 
 public enum TestFeatureVersion implements FeatureVersion {
-    TEST_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
+    TEST_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
     // TEST_1 released right before MV 3.7-IVO was released, and it has no dependencies
-    TEST_1(1, MetadataVersion.IBP_3_7_IV0, Collections.emptyMap()),
+    TEST_1(1, MetadataVersion.IBP_3_7_IV0, Map.of()),
     // TEST_2 is not yet set to be the default version and maps to the latest testing version, and it depends on this metadata version
-    TEST_2(2, MetadataVersion.latestTesting(), Collections.singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.latestTesting().featureLevel()));
+    TEST_2(2, MetadataVersion.latestTesting(), Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.latestTesting().featureLevel()));
 
     private final short featureLevel;
     private final MetadataVersion metadataVersionMapping;
